<resources>
    <string name="app_name">EmployeeManager</string>
    <string name="headerApplication">Welcome to Employee Manager</string>
    <string name="btnGoToLoginApplication">Are you ready</string>
    <string name="headerLoginApplication">Login To Application</string>
    <string name="headerRegisterApplication">Register To Application</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="btnLoggedIn">Logged In</string>
    <string name="btnRegistered">Register</string>
    <string name="not_registered">Go to Registred</string>
    <string name="btnBack">Back</string>
    <string name="hintEmailR">Enter Email</string>
    <string name="hintPasswordR">Enter Password</string>
    <string name="hintConfPasswordR">Conf Password</string>
    <string name="btnLogOut">Log Out</string>
    <string name="headerEmployeeMenu">Choose Menu operations</string>
    <string name="btnGoToAddEmployee">Add Employee</string>
    <string name="btnGoToViewAllEmployee">View All Employee</string>
    <string name="btnUpdateData">Update Your Data</string>
    <string name="headerAddEmployee">Add Employee</string>
    <string name="hintFName">First Name</string>
    <string name="hintLName">Last Name</string>
    <string name="hintDepartments">Departments</string>
    <string name="hintSalary">Salary</string>
    <string name="btnAddEmployee">Add Employee</string>
    <string name="headerRadio">Gender</string>
    <string name="radioMale">Male</string>
    <string name="radioFemale">Female</string>
    <string name="textViewFName">Frist Name: </string>
    <string name="textViewLName">Last Name: </string>
    <string name="textViewDepartment">Department: </string>
    <string name="textViewSalary">Salary: </string>
    <string name="textViewGender">Gender: </string>
    <string name="btnGoToUpdateEmployee">Update</string>
    <string name="btnDeleteEmployee">Delete</string>
    <string name="btnUpdateEmployee">Update Employee</string>
    <string name="btnCancelUpdate">Cancel</string>
    <string name="headerUpdateEmployee">Update Employee</string>
</resources>
